# windsor

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  i686-unknown-none.json  linker.ld
.cargo/: config.toml
asm/: boot.s  boot_xcode.s  irq.s
build-macros/: Cargo.toml
build-macros/src/: lib.rs
build-tool/: Cargo.toml
build-tool/src/: binary.rs  cargo.rs  config.rs  lib.rs  main.rs
src/: font.rs  font2.rs  i2c.rs  main.rs  nv2a.rs  pci.rs  print.rs
src/cpu/: gdt.rs  mod.rs
src/nv2a/: mod.rs  pramdac.rs  prmcio.rs  prmvio.rs
windsor-boot/: Cargo.toml  build.rs  rom.ld
windsor-boot/.cargo/: config.toml
windsor-boot/asm/: boot.s  boot_xcode.s  gdt.s  irq.s  xcodes.s
windsor-boot/src/: bump.rs  main.rs  smbus.rs  xcode.rs
windsor-boot/src/asm/: boot.s  gdt.s  mod.rs
windsor-boot/src/cpu/: gdt.rs  idt.rs  io.rs  irq.rs  mmu.rs  mod.rs
windsor-boot/src/kimg/: brotli.rs  mod.rs  zstd.rs
windsor-kernel/: Cargo.toml  build.rs  kernel.ld  linker.ld  windsor.bin.br
windsor-kernel/asm/: interrupts.s
windsor-kernel/src/: encoder.rs  font.rs  main.rs  physram.rs  print.rs  smbus.rs
windsor-kernel/src/cpu/: gdt.rs  idt.rs  irq.rs  mmu.rs  mod.rs  pic.rs
windsor-kernel/src/nv2a/: mod.rs  pramdac.rs  prmcio.rs
