[package]
name = "windsor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "windsor"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"

[dependencies]
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
