[workspace] 

members = [
    "windsor-kernel",
    "windsor-boot",
    "build-tool",
]

default-members = [
    "build-tool"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
debug = true
