[workspace] 

members = [
#    "windsor-kernel",
#    "windsor-boot",
    "build-tool",
    "build-macros",
]

default-members = [
    "build-tool"
]

# Workaround until per-project targets work properly
exclude = [
    "windsor-kernel",
    "windsor-boot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[profile.opt-size]
inherits = "release"
panic = "abort"
opt-level = "z"
lto = true
debug = true
