[package]
name = "windsor-boot"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "windsor-boot"
test = false
bench = false

[features]
default = ["zstd"]
brotli = ["dep:brotli-decompressor"]
zstd = ["dep:zstd"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"

[dependencies]
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
volatile-register = "0.2.1"
autopad = "1.0.0"
proc-bitfield = { version = "0.2.2", features = ["nightly"] }
brotli-decompressor = { version = "2.3.4", default-features = false, features = [], optional = true }
md-5 = { version = "0.10.5", default-features = false }
hex-literal = "0.3.4"
alloc-no-stdlib = "2.0.4"
zstd = { package = "ruzstd", git = "https://github.com/antangelo/zstd-rs.git", branch = "no_std", default-features = false, optional = true }
