[package]
name = "windsor-boot"
#version.workspace = true
#edition.workspace = true
#license.workspace = true

version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[[bin]]
name = "windsor-boot"
test = false
bench = false

[dependencies]
proc-bitfield = { version = "0.2.2", features = ["nightly"] }
md-5 = { version = "0.10.5", default-features = false, optional = true }
alloc-no-stdlib = "2.0.4"
zstd = { package = "ruzstd", git = "https://github.com/antangelo/zstd-rs.git", branch = "no_std", default-features = false }
build-macros = { path = "../build-macros" }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"

[features]
default = []
checksum = ["md-5"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[profile.opt-size]
inherits = "release"
panic = "abort"
opt-level = "z"
lto = true
debug = true
codegen-units = 1
