[package]
name = "windsor-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "windsor-kernel"
test = false
bench = false

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"

[dependencies]
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
volatile-register = "0.2.1"
autopad = "1.0.0"
proc-bitfield = { version = "0.2.2", features = ["nightly"] }
alloc-no-stdlib = "2.0.4"
