[package]
name = "windsor-kernel"
#version.workspace = true
#edition.workspace = true
#license.workspace = true

version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[[bin]]
name = "windsor-kernel"
test = false
bench = false

[dependencies]
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
volatile-register = "0.2.1"
autopad = "1.0.0"
proc-bitfield = { version = "0.2.2" }
bitbybit = "1.2.0"
arbitrary-int = "1.2.5"
alloc-no-stdlib = "2.0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

[profile.opt-size]
inherits = "release"
panic = "abort"
opt-level = "z"
lto = true
debug = true
